--- a/style.css
+++ b/style.css
@@ -1,12 +1,57 @@
+body {
+
+}
+a {
+    background-color: white;
+  }
+.one {
+    background:#42df42;
+    padding: 35px 5px 15px 10px;
+    text-align: center;
+  } 
+  .one h1 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    position: relative;
+    color: white;
+    font-size: 3em;
+    font-weight: normal;
+    display: inline-block;
+    margin: 0;
+    line-height: 1;
+    padding: 2px 50px 4px 20px;
+    line-height: 100%;
+    border-top: 4px solid;
+  }
+  .one h1:before {
+    content: "You are";
+    position: absolute;
+    top: 8px;
+    left: -270px;
+    font-size: 1.5em;
+    transform: rotate(-25deg);
+    font-family: 'Marck Script', cursive;
+  }
+  .one h1:after {
+    content: ""; 
+    position: absolute;
+    width: 120%;
+    height: 4px;
+    right: 0;
+    bottom: -4px;
+    background: white;
+  }
+ 
 /* hide the checkbox */
 #menu__toggle {
     opacity: 0;
   }
   /* styling the button */
-  .menu__btn {    display: flex; /*use flex to center the content*/
+  .menu__btn {    
+    display: flex; /*use flex to center the content*/
     align-items: center;  /* center the content of the button */
     position: fixed;
-    top: 20px;
+    top: 225px;
     left: 20px;
     width: 26px;
     height: 26px;
@@ -21,7 +66,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #616161;
+    background-color: #0a7a06;
   }
   .menu__btn > span::before {
     content: '';
@@ -31,3 +76,152 @@
     content: '';
     top: 8px;
   }
+  /* menu container */
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: visible;
+    top: 200px;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: white;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  }
+  /* menu elements */
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #42df42;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .menu__item:hover {
+    background-color: #a6f578;
+  }
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: collapse;
+    left: 0;
+  }#menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+  }
+  .d-flex{
+    text-align: right;
+  }
+  div#enter object {
+    position: relative;
+    top: 3px;
+    margin-right: 10px;
+}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 2px 4px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 10%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+#login{
+    float:right;
+    position: relative;
+    top: -30px;
+    display: block;
+    margin-right: 0px;
+}
+img{
+    text-align:left;    
+    height: 300x;
+    width: 470px;
+    float:right;
+    position: relative;
+    top: 5px;
+    display: block;
+    margin-right: 0px; 
+    }
+    h2{
+        text-align:center;
+        color: white ;
+        font-family:'Open Sans', sans-serif;
+        font-size: 15px;
+        position: relative;
+        left: 70px;
+    }
+    h3{
+        text-align:right;
+        color: #2ea12e;
+        font-family:'Open Sans', sans-serif;
+        font-size: 20px;
+        
+       
+    }    
+    h4{
+        text-align:center;
+        color: #42df42;
+        font-family:'Open Sans', sans-serif;
+        font-size: 20px; 
+       
+    }
+    li{
+        text-align:right;
+        color: #42df42;
+        font-family:'Open Sans', sans-serif;
+        font-size: 15px; 
+        
+    }
+    figure {
+        display:inline-block;
+        width: 80%;
+        text-align: center;
+
+    }
+    figure figcaption {
+    text-align:center ;
+    } 
+    
