--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
     left: -270px;
     font-size: 1.5em;
     transform: rotate(-25deg);
-    font-family: 'Marck Script', cursive;
+    font-family: 'Marck Script , cursive;
   }
   .one h1:after {
     content: ""; 
@@ -204,4 +204,6 @@ img{
         font-size: 15px; 
     }    
     
-    
+    iframe {
+    border:seagreen;
+    }   
