--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body {
-
-}
 a {
     background-color: white;
     color: #066b1f;
@@ -32,7 +29,7 @@ a {
     left: -270px;
     font-size: 1.5em;
     transform: rotate(-25deg);
-    font-family: 'Marck Script , cursive;
+    font-family: 'Marck Script' , 'cursive';
   }
   .one h1:after {
     content: ""; 
@@ -51,7 +48,7 @@ a {
   /* styling the button */
   .menu__btn {    
     display: flex; /*use flex to center the content*/
-    align-items: center;  /* center the content of the button */
+    align-items: center;  /*center the content of the button */
     position: absolute;    
     top: 225px;
     left: 20px;
@@ -111,27 +108,31 @@ box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
   }
   #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
-  }
+}
+
   #menu__toggle:checked ~ .menu__btn > span::before {
     top: 0;
     transform: rotate(0);
-  }
+}
   #menu__toggle:checked ~ .menu__btn > span::after {
     top: 0;
     transform: rotate(90deg);
-  }
+}
   #menu__toggle:checked ~ .menu__box {
     visibility: visible;
     left: 0;
-  }
+}
+
   .d-flex{
     text-align: right;
-  }
+}
+
   div#enter object {
     position: relative;
     top: 3px;
     margin-right: 10px;
 }
+
 /* Full-width input fields */
 input[type=text], input[type=password] {
     width: 100%;
@@ -164,6 +165,7 @@ button:hover {
     display: block;
     margin-right: 0px;
 }
+
 img{
     text-align:left;    
     height: 300x;
@@ -174,6 +176,7 @@ img{
     display: block;
     margin-right: 0px; 
     }
+
     h2{
         text-align:center;
         color: white ;
@@ -182,21 +185,22 @@ img{
         position: relative;
         left: 70px;
     }
+
     h3{
         text-align:right;
         color: #2ea12e;
         font-family:'Open Sans', sans-serif;
-        font-size: 20px;
-        
-       
-    }    
+        font-size: 20px;     
+     
+    } 
+
     h4{
         text-align:center;
         color: #42df42;
         font-family:'Open Sans', sans-serif;
-        font-size: 20px; 
-       
+        font-size: 20px;     
     }
+
     li{
         text-align:right;
         color: #42df42;
